ms-frontend/k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-frontend
  labels:
    app: ms-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-frontend
  template:
    metadata:
      labels:
        app: ms-frontend
    spec:
      containers:
      - name: ms-frontend
        image: basma227/ms-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
