ms-frontend/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-frontend-service
spec:
  selector:
    app: ms-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
