ms-frontend/k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: cdr-frontend.example.com  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-frontend-service
            port:
              number: 80
